# condensate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  setup.py  start-condensate.sh  start_condensate.sh
condensate/: __init__.py  environment.py  utils.py  wavefunction.py
condensate/chamber/: potential.py
condensate/core/: CMakeLists.txt  __init__.py  chamber.cpp  chamber.hpp  defines.h  gp_kernels.cu  gp_kernels.h  gpcore.cpp  gpcore.hpp  gpcore.i  helper_cudagl.h  initialize.cpp  initialize.hpp  leap_controls.hpp  render.cpp  render.hpp  render_controls.hpp  wavefunction.cpp  wavefunction.hpp
condensate/core/leap/: LeapMath.h
condensate/evolution/: sequential.py
examples/: condensate-api.py  condensate-box-spoon.py  condensate-data-analysis.py  condensate-epsilon-omega-plot.py  condensate-parametric-heating.py  condensate-rotating.py  condensate-simple.py  condensate-streaming.py  random.ipynb  test.py  tmp.mpg
hidden/: Tunnelling.ipynb
notebooks/: .ipynb  Condensate_testing_environment.ipynb  Hall strip.ipynb  Imprint phase.ipynb  Leap motion control.ipynb  Phase Loss.ipynb  Rotini.ipynb  Tunnelling.ipynb  Vortex Edge Modes.ipynb  Vortex Gyroscope.ipynb  Vortex Lattices.ipynb  condensate-python-development.ipynb  gpcore experiments.ipynb  random.ipynb  working on condensate class.ipynb
notebooks/data/: README.md
notebooks/evolution/: evolve.py
notebooks/figures/: README.md
scripts/: mousetest.py
